kafka-bridge/kafka-bridge-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: strimzi
  name: strimzi-kafka-bridge
spec:
  ports:
  - name: amqps
    port: 5671
    protocol: TCP
    targetPort: 5671
  selector:
    name: strimzi-kafka-bridge
