kafka-bridge/kafka-bridge-route.yml
apiVersion: v1
kind: Route
metadata:
  name: strimzi-kafka-bridge-route 
spec:
  to:
    kind: Service
    name: strimzi-kafka-bridge
  tls:
    termination: passthrough
